--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".StoryDetailsActivity"></activity>
+        <activity android:name=".ChoicesActivity"/>
+        <activity android:name=".StoryBeginningPage" />
+        <activity android:name=".StoryDetailsActivity" android:windowSoftInputMode="stateVisible|adjustPan" />
         <activity android:name=".StoriesActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
