--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,14 +6,18 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ChoicesActivity"/>
+        <activity android:name=".LoginActivity"/>
+        <activity android:name=".SignupActivity"/>
+        <activity android:name=".ChoicesActivity" />
         <activity android:name=".StoryBeginningPage" />
-        <activity android:name=".StoryDetailsActivity" android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".StoryDetailsActivity"
+            android:windowSoftInputMode="adjustPan" />
         <activity android:name=".StoriesActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
